Fixing some emoji encoding issues

--- a/resources.html
+++ b/resources.html
@@ -1,8 +1,9 @@
-<!DOCTYPE html>
+<!DOCTYPE html >
 <html>
     <head>
         <title>BLM Alert: Resources</title>
         <meta name=”viewport” content=”width=device-width, initial-scale=1″>
+        <meta charset="UTF-8">
     </head>
 
     <h1>Want to help out? Check on these resources</h1>
