--- a/resources.html
+++ b/resources.html
@@ -4,21 +4,32 @@
         <title>BLM Alert: Resources</title>
         <meta name=”viewport” content=”width=device-width, initial-scale=1″>
         <meta charset="UTF-8">
+        <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     </head>
 
-    <h1>Want to help out? Check on these resources</h1>
+    <body class="w3-container w3-pale-yellow">
+        <header class="w3-blue-grey">
+            <h1>BLM Alerts: Real time protest information and resources.</h1>
+            <a href="/index.php">Home</a>
+            <a href="/resources.html">Resources</a>
+        </header>
+        <hr>
 
-    <body style="background-color:DimGray">
-        <ul>
+        <h2>Want to help out? Here are some resources</h2>
+        <ul class="w3-ul w3-border">
             <li><a href="https://tinyurl.com/emailforfloyd">Send an email to demand justice for George Floyd.</a></li>
             <li><a href="https://blacklivesmatters.carrd.co/">Lots of information/resources</a></li>
-            <li><a href="https://www.justiceforbigfloyd.com/">Sign a petition</a></li>
+            <li><a href="https://www.justiceforbigfloyd.com/">George Floyd Petition</a></li>
             <li><a href="https://twitter.com/kiesdaya/status/1265782360252887040">List of peitions you can sign</a></li>
             <li><a href="https://docs.google.com/document/u/0/d/14QKYIYCLrJVdu1bV13K6CaJpZpZvn4cqulBb3s9yYdA/mobilebasic">Another huge list of resources</a></li>
+            <li><a href="https://elephrame.com/textbook/BLM/chart">Find protests in your area</a></li>
         </ul>
 
-        <footer style="font-size:120%">
-        Made with 💙 by TheCodeWeaver. <a href="https://github.com/thecodeweaver/tweet-intel/">Source code</a>
+        <hr>
+        <footer class="w3-blue-grey">
+            Made with 💙 by <a href="https://github.com/thecodeweaver/">TheCodeWeaver</a>
         </footer>
+        
     </body>
+    
 </html>
