--- a/resources.html
+++ b/resources.html
@@ -8,6 +8,18 @@
         <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
         <link rel="stylesheet" href="https://www.w3schools.com/lib/w3-theme-blue-grey.css">
 
+        <style>
+            html {
+                /* To make use of full height of page*/
+                min-height: 100%;
+                margin: 0;
+            }
+            body {
+                min-height: 100%;
+                margin: 0;
+            }
+        </style>
+
     </head>
 
     <body class="w3-container w3-theme-d5 w3-mobile">
@@ -30,7 +42,7 @@
             </ul>
 
             <div class="footer w3-theme-d4">
-                Made with 💙 by <a href="https://github.com/thecodeweaver/">TheCodeWeaver</a>
+                Made with 💙 by <a href="https://thecodeweaver.github.io/">TheCodeWeaver</a>
                 </div>
         
     </body>
